--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -20,14 +20,14 @@
           </div>
         </div>
 
-        <form id="myForm">
-          <input type="email" id="email" class="form-control mt-2" placeholder="Write your email" />
-          <input type="text" id="subject" class="form-control mt-2" placeholder="Write subject" />
-          <textarea class="form-control lh-lg-5 mt-2" id="message" placeholder="Write your message..." rows="4"
-            cols="50"></textarea>
-          <button class="btn mt-3 w-100" type="button" onclick="sendEmail()">
+        <form #taskForm="ngForm" (ngSubmit)="sendMail()">
+          <input type="email" id="mail" name="mail" class="form-control mt-2" [(ngModel)]="form.mail" placeholder="Write your email" />
+          <input type="text" id="subject" name="subject" class="form-control mt-2" [(ngModel)]="form.subject" placeholder="Write subject" />
+          <textarea class="form-control lh-lg-5 mt-2" id="message" name="message" [(ngModel)]="form.message" placeholder="Write your message..." rows="4" cols="50"></textarea>
+          <button class="btn mt-3 w-100" type="submit" [disabled]="loading">
             SEND MESSAGE
           </button>
+          <app-loader *ngIf="loading"></app-loader>
         </form>
       </div>
       <div class="col-lg-6 col-md-12 mt-4">
@@ -43,17 +43,16 @@
         <div class="d-flex mt-4">
           <i class="bi bi-geo-alt ms-5"></i>
           <h5 class="ms-2"> <i class="fa-solid fa-house"></i>
-            House # 13 (5th Floor), Block-C, Main Road, Banasree, Rampura,
-            Dhaka-1219.
+             {{address}}
           </h5>
         </div>
         <div class="d-flex mt-2">
           <i class="bi bi-phone ms-5"></i>
-          <h5 class="ms-2"><i class="fa-solid fa-phone"></i> 09666 793 793, +88 02 8396601</h5>
+          <h5 class="ms-2"><i class="fa-solid fa-phone"></i>{{phone}}</h5>
         </div>
         <div class="d-flex mt-2">
           <i class="bi bi-envelope ms-5"></i>
-          <h5 class="ms-2"><i class="fa-solid fa-envelope"></i> info@bacbonltd.com</h5>
+          <h5 class="ms-2"><i class="fa-solid fa-envelope"></i>{{mail}}</h5>
         </div>
       </div>
     </div>
