--- a/src/app/signage/signage.component.html
+++ b/src/app/signage/signage.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12" *ngIf="signageBackgroundImage !=null">
         <img [src]="'http://localhost:8000/Signage intro/' + signageBackgroundImage" class="imagebanner" alt="Snow" />
         <div class="centered">
           <h1></h1>
@@ -100,18 +100,18 @@
 
           <!-- The slideshow/carousel -->
           <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./assets/rsz_1pexels-lisa-fotios-2090881.jpg" alt="Los Angeles" class="d-block rounded-2"
+            <div class="carousel-item active" *ngIf="image_one !=null">
+              <img [src]="'http://localhost:8000/Signage slide/' + image_one" alt="Los Angeles" class="d-block rounded-2"
                 style="width: 100%" />
               <div class="carousel-caption"></div>
             </div>
-            <div class="carousel-item">
-              <img src="./assets/rsz_2pexels-harsch-shivam-2007647-scaled.jpg" alt="Chicago" class="d-block rounded-2"
+            <div class="carousel-item" *ngIf="image_two !=null">
+              <img [src]="'http://localhost:8000/Signage slide/' + image_two" alt="Chicago" class="d-block rounded-2"
                 style="width: 100%" />
               <div class="carousel-caption"></div>
             </div>
-            <div class="carousel-item">
-              <img src="./assets/rsz_1nordwood-themes-krnzigktz48-unsplash.jpg" alt="New York" class="d-block rounded-2"
+            <div class="carousel-item" *ngIf="image_three !=null">
+              <img [src]="'http://localhost:8000/Signage slide/' + image_three" alt="New York" class="d-block rounded-2"
                 style="width: 100%" />
               <div class="carousel-caption"></div>
             </div>
@@ -130,7 +130,7 @@
 
     <div class="row mt-5">
       <div class="col-md-12 d-flex justify-centent-center align-items-center">
-        <h2 class="mb-5">Specification</h2>
+        <h2 class="mb-5">{{specifictionTitle}}</h2>
       </div>
     </div>
 
@@ -147,237 +147,13 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>Technology</td>
-                <td>IR Touch</td>
-                <td>IR Touch</td>
-                <td>IR Touch</td>
+              <tr *ngFor="let sl of specificationList">
+                <td>{{sl.feature}}</td>
+                <td>{{sl.inch_86_ifp}}</td>
+                <td>{{sl.inch_75_ifp}}</td>
+                <td>{{sl.inch_65_ifp}}</td>
               </tr>
-              <tr>
-                <td>Display Size</td>
-                <td>86" TFT LCD Module with DLED Backlight</td>
-                <td>75" TFT LCD Module with DLED Backlight</td>
-                <td>65" TFT LCD Module with DLED Backlight</td>
-              </tr>
-              <tr>
-                <td>Display Area</td>
-                <td>1895.0(H) x 1106.0 (V)</td>
-                <td>1665.66(H) x 994.73 (V)</td>
-                <td>1428.4 (H) x 803.5 (V)</td>
-              </tr>
-              <tr>
-                <td>Resolution</td>
-                <td>3840*2160 pixels (4K@60hz)</td>
-                <td>3840*2160 pixels (4K@60hz)</td>
-                <td>3840*2160 pixels (4K@60hz)</td>
-              </tr>
-              <tr>
-                <td>Aspect Ratio</td>
-                <td>(16:9)</td>
-                <td>(16:9)</td>
-                <td>(16:9)</td>
-              </tr>
-              <tr>
-                <td>Contrast Ratio</td>
-                <td>(4000:1)</td>
-                <td>(4000:1)</td>
-                <td>(4000:1)</td>
-              </tr>
-              <tr>
-                <td>Brightness</td>
-                <td>400cd/m2</td>
-                <td>400cd/m2</td>
-                <td>400cd/m2</td>
-              </tr>
-              <tr>
-                <td>Panel Bit/Colors</td>
-                <td>1.07G colors (8-bit+FRC).</td>
-                <td>1.07G colors (8-bit+FRC).</td>
-                <td>1.07G colors (8-bit+FRC).</td>
-              </tr>
-              <tr>
-                <td>Viewing Angles</td>
-                <td>178 degree</td>
-                <td>178 degree</td>
-                <td>178 degree</td>
-              </tr>
-              <tr>
-                <td>Touch Power Input</td>
-                <td>5V USB2.0</td>
-                <td>5V USB2.0</td>
-                <td>5V USB2.0</td>
-              </tr>
-              <tr>
-                <td>Touch Resolution</td>
-                <td>32767*32767</td>
-                <td>32767*32767</td>
-                <td>32767*32767</td>
-              </tr>
-              <tr>
-                <td>Bezel Thickness</td>
-                <td>18mm</td>
-                <td>18mm</td>
-                <td>18mm</td>
-              </tr>
-              <tr>
-                <td>Panel Dimension</td>
-                <td>1943.4*97.5*1166</td>
-                <td>1692.1 *97.5*1021.9</td>
-                <td>1470.9 *97.5* 897.5</td>
-              </tr>
-              <tr>
-                <td>Gross Weight (kg±2)</td>
-                <td>98 Kgs</td>
-                <td>63 Kgs</td>
-                <td>52 Kgs</td>
-              </tr>
-              <tr>
-                <td>Net Weight (kg±2)</td>
-                <td>68 Kgs</td>
-                <td>50 Kgs</td>
-                <td>42 Kgs</td>
-              </tr>
-              <tr>
-                <td>Response Time</td>
-                <td>≤10ms</td>
-                <td>≤10ms</td>
-                <td>≤10ms</td>
-              </tr>
-              <tr>
-                <td>Glass Surface</td>
-                <td>4mm Mohs7 Anti-glare glass</td>
-                <td>10 points on Android / 40 Points on Windows</td>
-                <td>10 points on Android / 40 Points on Windows</td>
-              </tr>
-              <tr>
-                <td>Touch Points</td>
-                <td>10 points on Android / 40 Points on Windows</td>
-                <td>10 points on Android / 40 Points on Windows</td>
-                <td>10 points on Android / 40 Points on Windows</td>
-              </tr>
-              <tr>
-                <td>Android OS Support</td>
-                <td>Android 8.0 64bit</td>
-                <td>Android 8.0 64bit</td>
-                <td>Android 8.0 64bit</td>
-              </tr>
-              <tr>
-                <td>CPU</td>
-                <td>Dual-core A73 and dual-core A53, 1.5GHz</td>
-                <td>Dual-core A73 and dual-core A53, 1.5GHz</td>
-                <td>Dual-core A73 and dual-core A53, 1.5GHz</td>
-              </tr>
-              <tr>
-                <td>GPU</td>
-                <td>Quad-core MaliG51</td>
-                <td>Quad-core MaliG51</td>
-                <td>Quad-core MaliG51</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>4GB DDR4</td>
-                <td>4GB DDR4</td>
-                <td>4GB DDR4</td>
-              </tr>
-              <tr>
-                <td>Flash Type and Size</td>
-                <td>32GB</td>
-                <td>32GB</td>
-                <td>32GB</td>
-              </tr>
-              <tr>
-                <td>Touch Life Time</td>
-                <td>Unlimited</td>
-                <td>Unlimited</td>
-                <td>Unlimited</td>
-              </tr>
-              <tr>
-                <td>Output Ports</td>
-                <td>
-                  LAN OUT RJ45 *1, LAN IN RJ45 * 1, RS232(TYPE-DB9) *1, USB2.0
-                  (TYPE-A) *2, USB3.0 OTG (5GB/S)*1 , AUDIO IN *1, SPDIF * 1 ,
-                  TOUCH INPUT USB2.0 (TYPE B) *3, DP IN*1, HDMI IN (2.0)*2,
-                  HDMI OUT (2.0) *1 , Type C *1
-                </td>
-                <td>
-                  LAN OUT RJ45 *1, LAN IN RJ45 * 1, RS232(TYPE-DB9) *1, USB2.0
-                  (TYPE-A) *2, USB3.0 OTG (5GB/S)*1 , AUDIO IN *1, SPDIF * 1 ,
-                  TOUCH INPUT USB2.0 (TYPE B) *3, DP IN*1, HDMI IN (2.0)*2,
-                  HDMI OUT (2.0) *1 , Type C *1
-                </td>
-                <td>
-                  LAN OUT RJ45 *1, LAN IN RJ45 * 1, RS232(TYPE-DB9) *1, USB2.0
-                  (TYPE-A) *2, USB3.0 OTG (5GB/S)*1 , AUDIO IN *1, SPDIF * 1 ,
-                  TOUCH INPUT USB2.0 (TYPE B) *3, DP IN*1, HDMI IN (2.0)*2,
-                  HDMI OUT (2.0) *1 , Type C *1
-                </td>
-              </tr>
-              <tr>
-                <td>Type and RJ-45 Ethernet Port</td>
-                <td>Available in the android board</td>
-                <td>Available in the android board</td>
-                <td>Available in the android board</td>
-              </tr>
-              <tr>
-                <td>Blutooth Supports</td>
-                <td>YES</td>
-                <td>YES</td>
-                <td>YES</td>
-              </tr>
-              <tr>
-                <td>Blutooth Supports</td>
-                <td>YES</td>
-                <td>YES</td>
-                <td>YES</td>
-              </tr>
-              <tr>
-                <td>Wi-Fi Support (a/b/g/n/ac or any other)</td>
-                <td>WIFI dongle</td>
-                <td>WIFI dongle</td>
-                <td>WIFI dongle</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td>2 X 15W</td>
-                <td>2 X 15W</td>
-                <td>2 X 15W</td>
-              </tr>
-              <tr>
-                <td>Digital Signage Software</td>
-                <td>Required</td>
-                <td>Required</td>
-                <td>Required</td>
-              </tr>
-              <tr>
-                <td>Accessories Included</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Power</td>
-                <td>100-240V AC (50/60 Hz)</td>
-                <td>100-240V AC (50/60 Hz)</td>
-                <td>100-240V AC (50/60 Hz)</td>
-              </tr>
-              <tr>
-                <td>Stand by Mode</td>
-                <td>_0.5W</td>
-                <td>_0.5W</td>
-                <td>_0.5W</td>
-              </tr>
-              <tr>
-                <td>Power Consumption</td>
-                <td>500W</td>
-                <td>_0.5W</td>
-                <td>500W</td>
-              </tr>
-              <tr>
-                <td>VESA standard</td>
-                <td>800x600</td>
-                <td>600x400</td>
-                <td>600x400</td>
-              </tr>
+ 
             </tbody>
           </table>
         </div>
@@ -387,9 +163,9 @@
     <div class="row d-flex">
       <div class="col-md-6">
         <div class="embed-responsive embed-responsive-16by9 rounded-3">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/t-LLCYKQsSc" title="YouTube video player"
-            frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-                     encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" [src]="link_name"
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+            encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </div>
     </div>
