--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -34,7 +34,7 @@
   <section class="mt-5">
     <div class="container">
       <div class="row text-center">
-        <h1 class="fw-bold">Our Team</h1>
+        <h1 class="fw-bold">{{title}}</h1>
       </div>
       <div class="row d-flex align-items-center team p-5" style=" overflow-x: auto; ">
         <ng-container *ngFor="let tm of teamList">
